# KoodousFinder

./: .gitignore  LICENSE  README.md  koodousFinder.py  pyproject.toml
.github/workflows/: pipeline.yaml
src/: __init__.py
src/koodousfinder/: __init__.py  client.py  console.py  response.py
tests/: __init__.py  test_client.py  test_console.py
tests/data/: payload.json
