[tool.poetry]
name = "koodousfinder"
version = "0.1.0"
description = "A simple tool to allows users to search for and analyze android apps for potential security threats and vulnerabilities"
authors = [
    "teixeira0xfffff <www@www.www>",
    "brlaw <www@www.www>",
]
repository = "https://github.com/teixeira0xfffff/KoodousFinder"
readme = "README.md"

[tool.poetry.scripts]
koodousfinder = 'koodousfinder.console:run'


[tool.poetry.dependencies]
python = ">=3.7.2,<4.0"
requests = "^2.28.2"
keyring = "^23.13.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pylint]
max-line-length = 88
disable = [
    "C0103", # (invalid-name)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
    "R0913", # (too-many-arguments)
    "W0105", # (pointless-string-statement)
]
