[tool.poetry]
name = "koodousfinder"
version = "0.1.1"
description = "A simple tool to allows users to search for and analyze android apps for potential security threats and vulnerabilities"
authors = [
    "teixeira0xfffff <www@www.www>",
    "brlaw <www@www.www>",
]
repository = "https://github.com/teixeira0xfffff/KoodousFinder"
readme = "README.md"
license = "MIT"


[tool.poetry.scripts]
koodousfinder = 'koodousfinder.console:run'


[tool.poetry.dependencies]
python = ">=3.7.2,<3.12"
requests = ">=2.31.0"
keyring = ">=23.13.1"
pydantic = ">=1.10.9"
stix2 = ">=3.0.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.1"
pytest-cov = ">=4.0.0"
ruff = ">=0.0.273"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-v -s"
testpaths = [
    "tests"
]
